chore: update social preview image

--- a/assets/socials/index.html
+++ b/assets/socials/index.html
@@ -280,7 +280,7 @@
       </div>
       <div class="subtitle">
         <span class="exception">return</span>
-        <span class="string">"17+ total themes"</span>
+        <span class="string">"18+ themes"</span>
       </div>
     </header>
 
