refactor: make footer hidden by default

--- a/assets/socials/index.html
+++ b/assets/socials/index.html
@@ -358,7 +358,7 @@
     Toggle Canvas
   </button>
   <button
-    class="toggle-btn active"
+    class="toggle-btn"
     id="toggleFooter"
     onclick="toggleElement('footer')"
   >
@@ -367,7 +367,7 @@
 </div>
 
 <!-- Syntax Color Reference for Testing -->
-<div class="color-reference" id="footer">
+<div class="color-reference" style="display: none" id="footer">
   <h3>Syntax Highlighting Colors (Oasis Abyss Palette)</h3>
   <div class="color-grid">
     <!-- Cold: Data -->
